--- a/style.css
+++ b/style.css
@@ -18,7 +18,15 @@ h1 {
   padding: 4%;
   text-align: center;
   font-weight: 700;
+  font-size: 3rem;
   color: var(--grey);
+}
+
+button {
+  background-color: var(--orange);
+  border: 1px solid var(--orange);
+  color: white;
+  border-radius: 5px;
 }
 
 .container-flex {
@@ -144,20 +152,79 @@ h1 {
 .tags {
   font-size: 0.9rem;
 }
+
 .articles button {
   width: 30%;
-  background-color: var(--orange);
   display: inline;
   padding: 7px 10px;
-  color: white;
-  border-radius: 5px;
-  border: none;
+  border: 1px solid var(--orange);
   margin-top: 20px;
   align-self: flex-end;
 }
 
+button:hover {
+  background-color: #ae6c08;
+  color: rgb(255, 255, 255);
+  transition: 0.4s ease;
+}
 @media only screen and (max-width: 500px) {
   .articles {
     width: 95%;
+  }
+}
+
+/* Article Insert */
+
+.article-insert {
+  width: 70%;
+  margin: auto;
+  padding-bottom: 50px;
+}
+.article-insert span {
+  display: block;
+  text-align: center;
+  font-weight: 700;
+  font-size: 3rem;
+  color: var(--grey);
+  padding: 50px 0;
+}
+
+.input-style {
+  font-size: 1.1rem;
+  box-sizing: border-box;
+  padding: 12px 20px;
+  border: 1px solid var(--grey);
+  border-radius: 5px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.tag-title {
+  flex-wrap: wrap;
+  gap: 20px;
+}
+#tags {
+  flex-grow: 1;
+}
+
+#title {
+  flex-grow: 4;
+}
+
+#decription {
+  margin-top: 20px;
+  width: 100%;
+}
+.article-insert button {
+  padding: 7px 20px;
+  display: flex;
+  justify-content: center;
+  width: 30%;
+  margin: 20px auto;
+  font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 763px) {
+  .article-insert button {
+    width: 100%;
   }
 }
